[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]

[sub_resource type="Animation" id=3]
resource_name = "attack"

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 801, 390 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AboveHeadPos" type="Node2D" parent="."]
scale = Vector2( -1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerRange" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRange"]
position = Vector2( 1, 4 )

[node name="Hurtbox" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
__meta__ = {
"_edit_lock_": true
}

[node name="AttackArea" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color( 1, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.67451, 0.611765, 0.611765, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/die = SubResource( 2 )
anims/idle = SubResource( 1 )

[connection signal="area_entered" from="PlayerRange" to="." method="_on_PlayerRange_area_entered"]
[connection signal="area_exited" from="PlayerRange" to="." method="_on_PlayerRange_area_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_AttackArea_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
